Sat Nov  1 22:36:30 CET 2003 Daniel Veillard <daniel@veillard.com>

	* tests/REC/test-5.2-17.xsl tests/REC/test-5.2-18.xsl: fixing two
	  broken tests (revealed by #125502)

Sat Nov  1 07:41:06 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libexslt/strings.c: fix bug #125265 about entities breaking
	  exsl:tokenize and exsl:split
	* tests/exslt/strings/split.1.* tests/exslt/strings/tokenize.1.*:
	  augmented the reression tests with the example from the bug report.

Fri Oct 31 20:26:04 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/preproc.c: fix bug #120828 make sure that xsl:sort is
	  empty.

Fri Oct 31 15:53:45 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/documents.c libxslt/imports.c libxslt/xslt.c libxslt/xslt.h
	  xsltproc/xsltproc.c: switch to use xmlReadfile instead of
	  xmlParseFile, this avoid relying on global parser options, far
	  far cleaner.
	* tests/XSLTMark/xslbench1.out tests/general/bug-90.out: fixes a
	  slightly corrected output for CDATA and STYLE element save.

Tue Oct 28 15:30:54 CET 2003 Daniel Veillard <daniel@veillard.com>

	* configure.in python/Makefile.am python/tests/Makefile.am: applied
	  patch from Roumen Petrov for bug #124539 when building outside the
	  source directory
	* libxslt/xsltutils.c: fixed the way to grab the line number from
	  the document, use the predefiend libxml2 API which mate it work
	  with both 2.5.x and 2.6.x

Mon Oct 27 08:57:43 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* libxslt/xslt.c: put in #undef for IS_BLANK macros to fix
	  problem reported on the mailing list by Justin Fletcher

Fri Oct 24 00:49:05 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* configure.in libxslt.spec.in: doing some testing and raising
	  the build requirement to 2.5.10 
	* libexslt/Makefile.am configure.in: applied patch from Graham Wilson
	  for linking the exslt lib with the lib being build instead of the
	  installed one

Thu Oct 23 15:48:39 HKT 2003 William Brack <wbrack@mmm.com.hk>
